<resources>
    <string name="app_name">ShareLock</string>
    <string name="email">Email</string>
    <string name="login">Passwordless Login</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_access_log">View access log</string>
    <string name="door_name">Door Name</string>
    <string name="tap_to_unlock">Tap to get unlock key</string>
    <string name="tap_to_save">Tap to begin key sync with lock</string>
    <string name="tap_to_save_new">Tap to update key with lock</string>
    <string name="unlocked">Key obtained\nHold the phone near the lock</string>
    <string name="lock_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="signal_success">Put lock into setup and\nhold the phone near the lock</string>
    <string name="signal_failed">Failed to receive NFC</string>
    <string name="add_lock">Add Lock</string>
    <string name="edit_lock">Edit Lock</string>
    <string name="ring_normal_color">#edf2ff</string>
    <string name="ring_success_color">#AEC6FF</string>
    <string name="missing_fields">Missing required fields</string>
    <string name="lock_added">New lock added</string>
    <string name="lock_edited">Lock updated</string>
    <string name="lock_deleted">Lock deleted</string>
    <string name="signin_success">Successfully signed in with email link!</string>
    <string name="sigin_failed">Error signing in with email link</string>
    <string name="delete">Delete</string>
    <string name="share_lock">Share Lock</string>
    <string name="new_share">New Share</string>
    <string name="no_lock">No Lock</string>
    <string name="apdu_service_name">ShareLockNfcService</string>
    <string name="apdu_service_desc">This service is required for the ShareLock App</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="role">Role</string>
    <string name="role_title">What can a role do?</string>
    <string name="edit_share">Edit Share</string>
    <string name="never">Never</string>
    <string name="view_access_log_title">View Access Log</string>
    <string name="no_logs">No Logs</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string-array name="expiry_time">
        <item>Never</item>
        <item>Select a time...</item>
    </string-array>
    <string-array name="roles">
        <item>Owner</item>
        <item>Manager</item>
        <item>User</item>
    </string-array>
</resources>